# CPS2004

./: README.md
CPS2004-Logistics/: main.tex
Task 1/C++/: CLI.cpp  CLI.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  main.cpp
Task 1/C++/Components/: Product_Include.h  Shipment.cpp  Shipment.h  ShipmentManager.cpp  ShipmentManager.h  Stock.cpp  Stock.h  TransportManager.cpp  TransportManager.h  Transport_Include.h
Task 1/C++/Components/Product/: Accessory.cpp  Accessory.h  Apparel.cpp  Apparel.h  Appliance.cpp  Appliance.h  Clothing.cpp  Clothing.h  Consumable.cpp  Consumable.h  Decor.cpp  Decor.h  Digital.cpp  Digital.h  Drink.cpp  Drink.h  Electronics.h  Flora.h  Food.cpp  Food.h  Furniture.h  Games.h  Packaging.cpp  Packaging.h  Physical.cpp  Physical.h  Plants.cpp  Plants.h  Product.h  Seeds.cpp  Seeds.h  Storage.cpp  Storage.h  Tech.cpp  Tech.h
Task 1/C++/Components/Transport/: AirTransport.cpp  AirTransport.h  LandTransport.cpp  LandTransport.h  SeaTransport.cpp  SeaTransport.h  Transport.cpp  Transport.h
Task 1/Java/logistics/src/main/java/com/logistics/: CLI.java  InputHandler.java
Task 1/Java/logistics/src/main/java/com/logistics/Components/: Shipment.java  ShipmentManager.java
Task 1/Java/logistics/src/main/java/com/logistics/Components/Product/: Accessory.java  Apparel.java  Appliance.java  Clothing.java  Consumable.java  Decor.java  Digital.java  Drink.java  Electronics.java  Flora.java  Food.java  Furniture.java  Games.java  Physical.java  Plants.java  Product.java  Seeds.java  Storage.java  Tech.java
Task 1/Java/logistics/src/main/java/com/logistics/Components/Transport/: AirTransport.java  LandTransport.java  SeaTransport.java  Transport.java
Task 1/Java/logistics/src/test/java/com/logistics/: AppTest.java
Task 2/Java/logistics/: pom.xml
Task 2/Java/logistics/src/main/java/com/logistics/: CLI.java
Task 2/Java/logistics/src/main/java/com/logistics/Components/: ShipmentManager.java  Stock.java  TransportManager.java
Task 2/Java/logistics/src/main/java/com/logistics/Components/Product/: Accessory.java  Apparel.java  Appliance.java  Clothing.java  Decor.java  Digital.java  Drink.java  Food.java  Furniture.java  Physical.java  Plants.java  Product.java  Seeds.java  Storage.java  Tech.java
Task 2/Java/logistics/src/main/java/com/logistics/Components/Shipment/: Shipment.java  ShipmentDecorator.java
Task 2/Java/logistics/src/main/java/com/logistics/Components/Transport/: AirTransport.java  LandTransport.java  SeaTransport.java  Transport.java
Task 3/: shipment.pb  stock.pb  transport.pb
Task 3/C++Stock Viewer/: CMakeLists.txt  PBLogistics.pb.h  Stock.cpp
Task 3/C++Stock Viewer/Product/: Accessory.cpp  Accessory.h  Apparel.cpp  Appliance.cpp  Appliance.h  Clothing.cpp  Decor.h  Digital.cpp  Digital.h  Drink.cpp  Drink.h  Electronics.h  Flora.cpp  Food.h  Furniture.cpp  Games.cpp  Games.h  Physical.h  Plants.cpp  Plants.h  Product.cpp  Seeds.cpp  Seeds.h  Storage.h  Tech.cpp
Task 3/Java/logistics/: pom.xml
Task 3/Java/logistics/src/main/java/com/logistics/: CLI.java
Task 3/Java/logistics/src/main/java/com/logistics/Components/: ProductFactory.java  TransportFactory.java
Task 3/Java/logistics/src/main/java/com/logistics/Components/Product/: Appliance.java  Clothing.java  Consumable.java  Drink.java  Food.java  Games.java  Packaging.java  Physical.java  Seeds.java  Tech.java
Task 3/Java/logistics/src/main/java/com/logistics/Components/Shipment/: ExpressDeliveryDecorator.java  IShipment.java  Shipment.java
Task 3/Java/logistics/src/main/java/com/logistics/Components/Transport/: SeaTransport.java  Transport.java
Task 3/Java/logistics/src/main/java/com/logistics/Serialization/: Serialize.java
Task 4/C++CostCalculationServer/: CMakeLists.txt  main.cpp  remotemap.grpc.pb.cc  remotemap.grpc.pb.h  remotemap.pb.cc  remotemap.pb.h  remotemap.proto
Task 4/C++Stock Viewer/: PBLogistics.pb.cc  Stock.h  main.cpp
Task 4/C++Stock Viewer/Product/: Apparel.h  Clothing.h  Consumable.h  Decor.cpp  Electronics.cpp  Flora.h  Food.cpp  Furniture.h  Physical.cpp  Product.h  Storage.cpp  Tech.h
Task 4/Java/logistics/: pom.xml
Task 4/Java/logistics/src/main/java/com/logistics/: InputHandler.java  Main.java
Task 4/Java/logistics/src/main/java/com/logistics/Components/: ShipmentManager.java  Stock.java  TransportManager.java
Task 4/Java/logistics/src/main/java/com/logistics/Components/Product/: Accessory.java  Decor.java  Digital.java  Electronics.java  Flora.java  Plants.java  Product.java  Storage.java
Task 4/Java/logistics/src/main/java/com/logistics/Components/Shipment/: GlobalDiscountDecorator.java  Shipment.java
Task 4/Java/logistics/src/main/java/com/logistics/Components/Transport/: AirTransport.java  LandTransport.java
Task 4/Java/logistics/src/main/java/com/logistics/GRPC/: CalculationsGrpcClient.java
Task 4/Java/logistics/src/main/java/com/logistics/Serialization/: PBLogistics.java
Task 4/Java/logistics/src/test/proto/: remotemap.proto
